# tacit-knowledge-elicitation

./: .dockerignore  .env.example  .gitignore  .lycheeignore  AGENTS.md  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
pipeline/: README.md  pyproject.toml
pipeline/pipeline/: __init__.py  __main__.py  config.py  llm.py  models.py  registry.py  run.py
pipeline/pipeline/chunking/: __init__.py  base.py  paragraph.py  runner.py  sliding_window.py
pipeline/pipeline/dedup/: __init__.py  base.py  exact.py  llm_dedup.py  runner.py
pipeline/pipeline/export/: __init__.py  platform_json.py  summary_report.py
pipeline/pipeline/ingest/: __init__.py  base.py  notion.py  notion_mcp.py  pdf.py  runner.py  slack.py  slack_mcp.py  text.py
pipeline/pipeline/parsers/: __init__.py  base.py  docling_strategy.py  pymupdf_strategy.py
pipeline/pipeline/stages/: __init__.py  base.py  contradiction_detection.py  norm_extraction.py  question_generation.py
pipeline/tests/: conftest.py  test_chunking.py  test_config.py  test_dedup.py  test_export.py  test_ingest.py  test_llm.py  test_parsers.py  test_run.py  test_stages.py
worker/: Dockerfile  pyproject.toml
worker/tests/: conftest.py  test_endpoints.py  test_llm_parsing.py  test_question_extract.py  test_respondent_recommend.py
worker/tests/fixtures/: extraction_response.json  question_gen_response.json  recommend_response.json  review_response.json  scaffold_response.json
worker/worker/: config.py  llm.py  main.py  platform_client.py  schemas.py
(+229 files in other folders)
