[project]
name = "knowledge-elicitation-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "litellm>=1.40.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[tool.setuptools.packages.find]
include = ["worker*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
